update link social

--- a/index.html
+++ b/index.html
@@ -42,28 +42,24 @@
     <aside
       class="absolute top-2/5 left-0 flex flex-col items-center gap-9 rounded-r-2xl bg-transparent p-6 shadow-xl/10"
     >
-      <a href="http://">
+      <a href="https://github.com/FabioTognaa">
         <img
           src="/github.svg"
           class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
           alt="github icon"
         />
       </a>
-      <a href="http://">
+      <a href="https://www.linkedin.com/in/fabio-tognarelli/">
         <img
           src="/linkedin.svg"
-          src="/github.svg"
           class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-          alt="github icon"
           alt="linkedin icon"
         />
       </a>
-      <a href="http://">
+      <a href="https://www.instagram.com/fabiotognarellii/">
         <img
           src="/instagram.svg"
-          src="/github.svg"
           class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-          alt="github icon"
           alt="ig icon"
         />
       </a>
