--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="scroll-smooth">
+<html class="paddi scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,93 +7,100 @@
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body
-    class="font-inter m-0 h-screen bg-[#e2e2e2ff] bg-[url('/background2.png')] bg-cover text-[#0a2342]"
+    class="font-inter bg-[#e2e2e2ff] bg-[url('/background2.png')] bg-cover text-[#0a2342]"
     id="home-section"
   >
-    <header
-      class="fixed top-0 right-0 left-0 z-50 flex h-24 w-full items-center justify-between px-12 text-[1rem] font-black shadow-xl/10 backdrop-blur-lg"
-    >
-      <div class="flex items-center gap-6">
-        <p class="text-right text-lg font-semibold">Fabio Tognarelli</p>
-      </div>
-      <nav class="flex gap-8 font-semibold">
-        <a
-          class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-          href="#home-section"
-          >Home</a
+    <section class="m-0 h-screen">
+      <header
+        class="fixed top-0 right-0 left-0 z-50 flex h-24 w-full items-center justify-between px-12 text-[1rem] font-black shadow-xl/10 backdrop-blur-lg"
+      >
+        <div class="flex items-center gap-6">
+          <p class="text-right text-lg font-semibold">Fabio Tognarelli</p>
+        </div>
+        <nav class="flex gap-8 font-semibold">
+          <a
+            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
+            href="#home-section"
+            >Home</a
+          >
+          <a
+            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
+            href="#about-me-section"
+            >About Me</a
+          >
+          <a
+            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
+            href="#progetti-section"
+            >Progetti</a
+          >
+          <a
+            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
+            href="#contatti-section"
+            >Contatti</a
+          >
+        </nav>
+      </header>
+      <aside
+        class="absolute top-2/5 left-0 flex flex-col items-center gap-9 rounded-r-2xl bg-transparent p-6 shadow-xl/10"
+      >
+        <a href="https://github.com/FabioTognaa">
+          <img
+            src="/github.svg"
+            class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
+            alt="github icon"
+          />
+        </a>
+        <a href="https://www.linkedin.com/in/fabio-tognarelli/">
+          <img
+            src="/linkedin.svg"
+            class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
+            alt="linkedin icon"
+          />
+        </a>
+        <a href="https://www.instagram.com/fabiotognarellii/">
+          <img
+            src="/instagram.svg"
+            class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
+            alt="ig icon"
+          />
+        </a>
+      </aside>
+      <div
+        class="flex h-full w-full flex-col items-center justify-center text-left tracking-wider text-[[#0a2342]"
+      >
+        <h1
+          class="animate-fade-in-slide-up text-4xl font-semibold opacity-0 delay-500"
         >
+          Benvenuto nel mio sito web!
+        </h1>
+        <p
+          class="animate-fade-in-slide-up mb-4 text-lg font-light opacity-0 delay-700"
+        >
+          Sono uno studente di informatica presso l'università degli studi di
+          Pisa. Questo è il mio sito web personale.
+        </p>
         <a
-          class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
+          class="m-0 mr-6 p-0 text-lg no-underline transition-all duration-200 ease-out hover:scale-110 hover:cursor-pointer hover:rounded-[3rem] hover:bg-[#0a2342] hover:px-6 hover:py-2 hover:font-semibold hover:text-white"
           href="#about-me-section"
-          >About Me</a
+          >Cliccami</a
         >
-        <a
-          class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-          href="progetti-section"
-          >Progetti</a
-        >
-        <a
-          class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-          href="contatti-section"
-          >Contatti</a
-        >
-      </nav>
-    </header>
-    <aside
-      class="absolute top-2/5 left-0 flex flex-col items-center gap-9 rounded-r-2xl bg-transparent p-6 shadow-xl/10"
-    >
-      <a href="https://github.com/FabioTognaa">
-        <img
-          src="/github.svg"
-          class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-          alt="github icon"
-        />
-      </a>
-      <a href="https://www.linkedin.com/in/fabio-tognarelli/">
-        <img
-          src="/linkedin.svg"
-          class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-          alt="linkedin icon"
-        />
-      </a>
-      <a href="https://www.instagram.com/fabiotognarellii/">
-        <img
-          src="/instagram.svg"
-          class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-          alt="ig icon"
-        />
-      </a>
-    </aside>
-    <div
-      class="flex h-full w-full flex-col items-center justify-center text-left tracking-wider text-[[#0a2342]"
-    >
-      <h1
-        class="animate-fade-in-slide-up text-4xl font-semibold opacity-0 delay-500"
-      >
-        Benvenuto nel mio sito web!
-      </h1>
-      <p
-        class="animate-fade-in-slide-up mb-4 text-lg font-light opacity-0 delay-700"
-      >
-        Sono uno studente di informatica presso l'università degli studi di
-        Pisa. Questo è il mio sito web personale.
-      </p>
-      <a
-        class="m-0 mr-6 p-0 text-lg no-underline transition-all duration-200 ease-out hover:scale-110 hover:cursor-pointer hover:rounded-[3rem] hover:bg-[#0a2342] hover:px-6 hover:py-2 hover:font-semibold hover:text-white"
-        href="#about-me-section"
-        >Cliccami</a
-      >
-    </div>
+      </div>
+    </section>
 
-    <h1 id="about-me-section" class="mt-20 ml-16 text-7xl font-light">
+    <h1
+      id="about-me-section"
+      class="mt-20 ml-16 scroll-mt-28 text-7xl font-light"
+    >
       About Me
     </h1>
-    <section class="m-16 mt-16 mr-36 grid h-3/5 grid-cols-2 grid-rows-2 gap-4">
+    <section
+      class="m-16 mt-16 mr-36 grid  h-3/4 grid-cols-3 grid-rows-2 gap-0.5 mb-80" 
+    >
       <div
         class="row-span-2 flex max-w-sm flex-col justify-center rounded-lg border border-blue-200 py-0 text-center transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
         <div class="flex justify-center">
-          <img class="h-auto w-50" src="/me-acquerelli.svg" alt="foto me" />
+          <img class="h-auto w-50" src="" alt="foto me" />
         </div>
         <div class="mt-7 mb-0 p-0">
           <span class="text-2xl font-semibold">Fabio Tognarelli</span>
@@ -108,9 +115,9 @@
         </div>
       </div>
       <div
-        class="rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
+        class="col-span-2 mb-5 rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
-        <h1 class="mb-4 text-xl font-semibold">Chi sono:</h1>
+        <h1 class="mb-4 text-3xl font-semibold">Chi sono:</h1>
         <p class="text-[0.9rem] font-light">
           Studente di informatica presso l'Università di Pisa, con la passione
           per lo sviluppo Front-End/Back-End/AI (specifica la tua area di
@@ -122,9 +129,9 @@
         </p>
       </div>
       <div
-        class="rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
+        class="col-span-2 rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
-        <h1 class="mb-4 text-xl font-semibold">Percorso di studi:</h1>
+        <h1 class="mb-4 text-3xl font-semibold">Percorso di studi:</h1>
         <ul>
           <li>Polo scientifico tecnico professionale Fermi - Giorgi</li>
           <p class="text-[0.9rem] font-light">Indirizzo tecnico informatico</p>
@@ -135,12 +142,47 @@
         </ul>
       </div>
     </section>
-    <h1 id="about-me-section" class="mt-20 ml-16 text-5xl font-light">
+    <h1
+      id="progetti-section"
+      class="mt-28 mb-24 ml-16 scroll-mt-28 text-7xl font-light"
+    >
       Progetti
     </h1>
-    <h1 id="about-me-section" class="mt-20 ml-16 text-5xl font-light">
+    <section class="h-screen">
+      <div class="flex justify-around ">
+        <img
+          src="/nodejs-ar21.svg"
+          class="h-14 w-auto transition-transform duration-200 ease-in-out hover:scale-105"
+          alt=""
+        />
+        <img
+          src="/javascript-icon.svg"
+          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+          alt=""
+        />
+        <img
+          src="/html_icon.svg"
+          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+          alt=""
+        />
+        <img
+          src="/css-icon.svg"
+          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+          alt=""
+        />
+        <img
+          src="/tailwindcss-icon.svg"
+          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+          alt=""
+        />
+      </div>
+    </section>
+    <h1
+      id="contatti-section"
+      class="mt-20 ml-16 scroll-mt-28 text-5xl font-light"
+    >
       Contatti
     </h1>
-    <div class="h-full"></div>
+    <section class="h-full"></section>
   </body>
 </html>
