--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
       About Me
     </h1>
     <section
-      class="m-16 mt-16 mr-36 grid  h-3/4 grid-cols-3 grid-rows-2 gap-0.5 mb-80" 
+      class="m-16 mt-16 mr-36 mb-40 grid h-3/4 grid-cols-3 grid-rows-2 gap-0.5"
     >
       <div
         class="row-span-2 flex max-w-sm flex-col justify-center rounded-lg border border-blue-200 py-0 text-center transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
         <div class="flex justify-center">
-          <img class="h-auto w-50" src="" alt="foto me" />
+          <img class="h-auto w-50" src="/me-acquerelli.svg" alt="foto me" />
         </div>
         <div class="mt-7 mb-0 p-0">
           <span class="text-2xl font-semibold">Fabio Tognarelli</span>
@@ -115,9 +115,9 @@
         </div>
       </div>
       <div
-        class="col-span-2 mb-5 rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
+        class="col-span-2 row-span-2 rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
-        <h1 class="mb-4 text-3xl font-semibold">Chi sono:</h1>
+        <h1 class="mb-4 text-4xl font-light">Chi sono:</h1>
         <p class="text-[0.9rem] font-light">
           Studente di informatica presso l'Università di Pisa, con la passione
           per lo sviluppo Front-End/Back-End/AI (specifica la tua area di
@@ -128,18 +128,34 @@
           mie competenze in [Tecnologia specifica]."
         </p>
       </div>
+    </section>
+    <h1 class="col-span-2 text-center text-5xl font-light">
+      Percorso di studi:
+    </h1>
+    <section class="mx-16 mt-24 mb-80 flex h-3/4 gap-4">
       <div
-        class="col-span-2 rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
+        class="flex flex-1 justify-start gap-10 rounded-lg p-6 transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
-        <h1 class="mb-4 text-3xl font-semibold">Percorso di studi:</h1>
-        <ul>
-          <li>Polo scientifico tecnico professionale Fermi - Giorgi</li>
-          <p class="text-[0.9rem] font-light">Indirizzo tecnico informatico</p>
-          <li class="mt-2">Università degli studi di Pisa</li>
-          <p class="text-[0.9rem] font-light">
+        <img src="/logo_fermi.svg" alt="" class="my-0 ml-0 h-full w-1/5" />
+        <div class="">
+          <h1 class="text-3xl">Polo tecnico scientifico E.Fermi</h1>
+          <h2 class="font-semibold">Lucca, Sept 2019 - Jun 2024</h2>
+          <p class="mt-1 text-lg font-light">
+            Diploma in tecnologie informatiche
+          </p>
+        </div>
+      </div>
+      <div
+        class="flex flex-1 justify-start gap-10 rounded-lg p-6 transition-all duration-200 ease-in-out hover:shadow-xl/20"
+      >
+        <img src="/logo_uni_pisa.svg" alt="" class="my-1 ml-0 h-full w-1/5" />
+        <div class="">
+          <h1 class="text-3xl">Università degli studi di Pisa</h1>
+          <h2 class="font-semibold">Pisa, Sept 2024 - Now</h2>
+          <p class="mt-1 text-lg font-light">
             Laurea triennale in Computer Science
           </p>
-        </ul>
+        </div>
       </div>
     </section>
     <h1
@@ -149,7 +165,7 @@
       Progetti
     </h1>
     <section class="h-screen">
-      <div class="flex justify-around ">
+      <div class="flex justify-around">
         <img
           src="/nodejs-ar21.svg"
           class="h-14 w-auto transition-transform duration-200 ease-in-out hover:scale-105"
@@ -172,6 +188,11 @@
         />
         <img
           src="/tailwindcss-icon.svg"
+          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+          alt=""
+        />
+        <img
+          src="/react_icon.svg"
           class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
           alt=""
         />
