--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body
-    class="font-inter bg-[#e2e2e2ff] bg-[url('/background2.png')] bg-cover text-[#0a2342]"
+    class="font-inter bg-[#e2e2e2ff] bg-[url('/background4.png')] bg-cover text-[#0a2342]"
     id="home-section"
   >
     <section class="m-0 h-screen">
@@ -15,7 +15,11 @@
         class="fixed top-0 right-0 left-0 z-50 flex h-24 w-full items-center justify-between px-12 text-[1rem] font-black shadow-xl/10 backdrop-blur-lg"
       >
         <div class="flex items-center gap-6">
-          <p class="text-right text-lg font-semibold">Fabio Tognarelli</p>
+          <a
+            class="m-0 inline-block w-auto rounded-full px-2.5 py-1 text-center text-lg font-semibold text-[#0a2342] transition-all duration-100 ease-linear hover:scale-105 hover:cursor-pointer"
+            download="/cv_TOGNARELLI_FABIO.pdf"
+            >Scarica CV</a
+          >
         </div>
         <nav class="flex gap-8 font-semibold">
           <a
@@ -71,7 +75,7 @@
         <h1
           class="animate-fade-in-slide-up text-4xl font-semibold opacity-0 delay-500"
         >
-          Benvenuto nel mio sito web!
+          Ciao, sono Fabio Tognarelli!
         </h1>
         <p
           class="animate-fade-in-slide-up mb-4 text-lg font-light opacity-0 delay-700"
@@ -93,29 +97,27 @@
     >
       About Me
     </h1>
-    <section
-      class="m-16 mt-16 mr-36 mb-40 grid h-3/4 grid-cols-3 grid-rows-2 gap-0.5"
-    >
+    <section class="m-16 mt-16 mr-36 mb-40 flex h-4/5 gap-10">
       <div
-        class="row-span-2 flex max-w-sm flex-col justify-center rounded-lg border border-blue-200 py-0 text-center transition-all duration-200 ease-in-out hover:shadow-xl/20"
+        class="flex max-w-sm flex-1 flex-col justify-center rounded-lg border border-blue-200 p-3 text-center transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
-        <div class="flex justify-center">
+        <div class="mt-3 flex justify-center">
           <img class="h-auto w-50" src="/me-acquerelli.svg" alt="foto me" />
         </div>
-        <div class="mt-7 mb-0 p-0">
+        <div class="mt-5 mb-0 p-0">
           <span class="text-2xl font-semibold">Fabio Tognarelli</span>
         </div>
         <div class="m-2">
           <a
             class="m-0 inline-block w-3/4 rounded-full border-2 border-blue-300 px-2.5 py-1 text-center text-lg font-semibold text-[#0a2342] transition-all duration-100 ease-linear hover:scale-105 hover:bg-blue-300 hover:text-gray-100"
             href="/cv_TOGNARELLI_FABIO.pdf"
-            download="cv_TOGNARELLI_FABIO.pdf"
+            download="/cv_TOGNARELLI_FABIO.pdf"
             >Scarica CV</a
           >
         </div>
       </div>
       <div
-        class="col-span-2 row-span-2 rounded-lg border border-blue-200 p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
+        class="flex-3 rounded-lg p-2 transition-all duration-200 ease-in-out hover:shadow-xl/20"
       >
         <h1 class="mb-4 text-4xl font-light">Chi sono:</h1>
         <p class="text-[0.9rem] font-light">
@@ -165,45 +167,133 @@
       Progetti
     </h1>
     <section class="h-screen">
+      <h1 class="text-center">
+        Ottime competenze in molti linguaggi di programmazione.
+      </h1>
       <div class="flex justify-around">
-        <img
-          src="/nodejs-ar21.svg"
-          class="h-14 w-auto transition-transform duration-200 ease-in-out hover:scale-105"
-          alt=""
-        />
-        <img
-          src="/javascript-icon.svg"
-          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
-          alt=""
-        />
-        <img
-          src="/html_icon.svg"
-          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
-          alt=""
-        />
-        <img
-          src="/css-icon.svg"
-          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
-          alt=""
-        />
-        <img
-          src="/tailwindcss-icon.svg"
-          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
-          alt=""
-        />
-        <img
-          src="/react_icon.svg"
-          class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
-          alt=""
-        />
+        <div class="flex flex-col items-center justify-center gap-3">
+          <img
+            src="/javascript-icon.svg"
+            class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+            alt=""
+          />
+          <img
+            src="/html_icon.svg"
+            class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+            alt=""
+          />
+          <img
+            src="/css-icon.svg"
+            class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+            alt=""
+          />
+        </div>
+        <div class="flex flex-col items-center justify-center gap-3">
+          <img
+            src="/nodejs-ar21.svg"
+            class="h-14 w-auto transition-transform duration-200 ease-in-out hover:scale-105"
+            alt=""
+          />
+
+          <img
+            src="/tailwindcss-icon.svg"
+            class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+            alt=""
+          />
+          <img
+            src="/react_icon.svg"
+            class="h-auto w-14 transition-transform duration-200 ease-in-out hover:scale-105"
+            alt=""
+          />
+        </div>
+        <div>
+          <img src="java.svg" alt="">
+          <img src="/c.svg" alt="">
+          <img src="/cpp.svg" alt="">
+        </div>
       </div>
     </section>
-    <h1
-      id="contatti-section"
-      class="mt-20 ml-16 scroll-mt-28 text-5xl font-light"
-    >
-      Contatti
-    </h1>
-    <section class="h-full"></section>
+
+    <footer class="h-full bg-transparent py-8" id="contatti-section">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div
+          class="flex flex-col items-center justify-between border-b border-blue-300 pb-8 md:flex-row"
+        >
+          <div class="mb-4 text-3xl font-semibold md:mb-0">
+            Fabio Tognarelli
+          </div>
+          <div class="m-0 flex gap-4 p-0">
+            <a
+              href="https://github.com/FabioTognaa"
+              class="transition duration-300 hover:text-blue-500"
+            >
+              <img
+                src="/github.svg"
+                alt=""
+                class="h-auto w-9 transition-transform duration-200 hover:scale-110"
+              />
+            </a>
+
+            <a
+              href="https://www.linkedin.com/in/fabio-tognarelli"
+              class="transition duration-300 hover:text-blue-500"
+            >
+              <img
+                src="/linkedin.svg"
+                alt=""
+                class="h-auto w-9 transition-transform duration-200 hover:scale-110"
+              />
+            </a>
+            <a
+              href="https://www.instagram.com/fabiotognarellii"
+              class="transition duration-300 hover:text-blue-500"
+            >
+              <img
+                src="/instagram.svg"
+                alt=""
+                class="h-auto w-9 transition-transform duration-200 hover:scale-110"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="flex justify-around gap-8 pt-8 md:grid-cols-3">
+          <div>
+            <h3 class="mb-4 text-lg font-semibold">Navigazione</h3>
+            <ul class="space-y-2">
+              <li>
+                <a href="#" class="transition duration-300 hover:text-blue-500"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#about-me-section"
+                  class="transition duration-300 hover:text-blue-500"
+                  >About Me</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#progetti-section"
+                  class="transition duration-300 hover:text-blue-500"
+                  >Progetti</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="mb-4 text-lg font-semibold">Contattami</h3>
+            <p>Email: fabiotognaa@gmail.com</p>
+            <p>Telefono: +39 366 838 1469</p>
+          </div>
+        </div>
+
+        <div class="mt-8 border-t border-blue-300 pt-8 text-center text-sm">
+          &copy; 2025 FabioTognaa.
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
