Refactor completo: Migrazione a React + Tailwind

--- a/index.html
+++ b/index.html
@@ -1,382 +1,13 @@
 <!doctype html>
-<html class="paddi scroll-smooth">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FabioTogna</title>
-    <link href="/src/style.css" rel="stylesheet" />
+    <title>fabio-tognarelli-website</title>
   </head>
-  <body
-    class="font-inter bg-[#e2e2e2ff] bg-[url('/background4.png')] bg-cover text-[#0a2342]"
-    id="home-section"
-  >
-    <section class="m-0 h-screen">
-      <header
-        class="fixed top-0 right-0 left-0 z-50 flex h-24 w-full items-center justify-between px-12 text-[1rem] font-black shadow-xl/10 backdrop-blur-lg"
-      >
-        <div class="flex items-center gap-6">
-          <a
-            class="m-0 inline-block w-auto rounded-full px-2.5 py-1 text-center text-lg font-semibold text-[#0a2342] transition-all duration-100 ease-linear hover:scale-105 hover:cursor-pointer"
-            download="/cv_TOGNARELLI_FABIO.pdf"
-            >Scarica CV</a
-          >
-        </div>
-        <nav class="flex gap-8 font-semibold">
-          <a
-            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-            href="#home-section"
-            >Home</a
-          >
-          <a
-            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-            href="#about-me-section"
-            >About Me</a
-          >
-          <a
-            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-            href="#progetti-section"
-            >Skills</a
-          >
-          <a
-            class="cursor-pointer text-center no-underline transition-all duration-200 ease-in-out hover:scale-120 hover:rounded-2xl hover:px-[18px] hover:py-[5px] hover:text-[#0a2342]"
-            href="#contatti-section"
-            >Contatti</a
-          >
-        </nav>
-      </header>
-      <aside
-        class="absolute top-2/5 left-0 flex flex-col items-center gap-9 rounded-r-2xl bg-transparent p-6 shadow-xl/10"
-      >
-        <a href="https://github.com/FabioTognaa">
-          <img
-            src="/github.svg"
-            class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-            alt="github icon"
-          />
-        </a>
-        <a href="https://www.linkedin.com/in/fabio-tognarelli/">
-          <img
-            src="/linkedin.svg"
-            class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-            alt="linkedin icon"
-          />
-        </a>
-        <a href="https://www.instagram.com/fabiotognarellii/">
-          <img
-            src="/instagram.svg"
-            class="linear block h-auto min-w-9 cursor-pointer transition-all duration-100 ease-in-out hover:scale-90"
-            alt="ig icon"
-          />
-        </a>
-      </aside>
-      <div
-        class="flex h-full w-full flex-col items-center justify-center text-left tracking-wider text-[[#0a2342]"
-      >
-        <h1
-          class="animate-fade-in-slide-up text-4xl font-semibold opacity-0 delay-500"
-        >
-          Ciao, sono Fabio Tognarelli!
-        </h1>
-        <p
-          class="animate-fade-in-slide-up mb-4 text-lg font-light opacity-0 delay-700"
-        >
-          Sono uno studente di informatica presso l'università degli studi di
-          Pisa. Questo è il mio sito web personale.
-        </p>
-        <a
-          class="m-0 mr-6 p-0 text-lg no-underline transition-all duration-200 ease-out hover:scale-110 hover:cursor-pointer hover:rounded-[3rem] hover:bg-[#0a2342] hover:px-6 hover:py-2 hover:font-semibold hover:text-white"
-          href="#about-me-section"
-          >Cliccami</a
-        >
-      </div>
-    </section>
-
-    <h1
-      id="about-me-section"
-      class="mt-20 ml-16 scroll-mt-28 text-7xl font-light"
-    >
-      About Me
-    </h1>
-    <section class="m-16 mt-16 mr-36 mb-24 flex h-4/5 gap-10">
-      <div
-        class="flex max-w-sm flex-1 flex-col justify-center rounded-lg border border-blue-200 p-3 text-center transition-all duration-200 ease-in-out hover:shadow-xl/20"
-      >
-        <div class="mt-3 flex justify-center">
-          <img class="h-auto w-50" src="/me-acquerelli.svg" alt="foto me" />
-        </div>
-        <div class="mt-5 mb-0 p-0">
-          <span class="text-2xl font-semibold">Fabio Tognarelli</span>
-        </div>
-        <div class="m-2">
-          <a
-            class="m-0 inline-block w-3/4 rounded-full border-2 border-blue-300 px-2.5 py-1 text-center text-lg font-semibold text-[#0a2342] transition-all duration-100 ease-linear hover:scale-105 hover:bg-blue-300 hover:text-gray-100"
-            href="/cv_TOGNARELLI_FABIO.pdf"
-            download="/cv_TOGNARELLI_FABIO.pdf"
-            >Scarica CV</a
-          >
-        </div>
-      </div>
-      <div class="flex-3 rounded-lg p-2">
-        <h1 class="mb-4 text-4xl font-light">Chi sono:</h1>
-        <p class="text-[0.9rem] font-light">
-          Studente di informatica presso l'Università di Pisa, con la passione
-          per lo sviluppo Front-End/Back-End/AI (specifica la tua area di
-          interesse). Forte motivazione nell'applicazione pratica delle
-          strutture dati e nella creazione di soluzioni web/software efficienti.
-          Cosa aggiungere sotto: Obiettivi: "Attualmente alla ricerca di
-          opportunità di stage o progetti open source per mettere in pratica le
-          mie competenze in [Tecnologia specifica]."
-        </p>
-        <h1 class="mt-6 mb-4 text-4xl font-light">Passioni ed Obiettivi</h1>
-        <p class="text-[0.9rem] font-light">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores
-          enim, pariatur id aliquid perspiciatis voluptatum ea odio consequatur
-          assumenda mollitia rerum nesciunt, dolor repudiandae quae, maiores
-          cupiditate numquam sed atque?
-        </p>
-      </div>
-    </section>
-    <h1 class="col-span-2 text-center text-5xl font-light">
-      Percorso di studi:
-    </h1>
-    <section class="mx-16 mt-24 mb-80 flex h-3/4 gap-4">
-      <div
-        class="flex flex-1 justify-start gap-10 rounded-lg p-6 transition-all duration-200 ease-in-out hover:shadow-xl/20"
-      >
-        <img src="/logo_fermi.svg" alt="" class="my-0 ml-0 h-full w-1/5" />
-        <div class="">
-          <h1 class="text-3xl">Polo tecnico scientifico E.Fermi</h1>
-          <h2 class="font-semibold">Lucca, Sept 2019 - Jun 2024</h2>
-          <p class="mt-1 text-lg font-light">
-            Diploma in tecnologie informatiche
-          </p>
-        </div>
-      </div>
-      <div
-        class="flex flex-1 justify-start gap-10 rounded-lg p-6 transition-all duration-200 ease-in-out hover:shadow-xl/20"
-      >
-        <img src="/logo_uni_pisa.svg" alt="" class="my-1 ml-0 h-full w-1/5" />
-        <div class="">
-          <h1 class="text-3xl">Università degli studi di Pisa</h1>
-          <h2 class="font-semibold">Pisa, Sept 2024 - Now</h2>
-          <p class="mt-1 text-lg font-light">
-            Laurea triennale in Computer Science
-          </p>
-        </div>
-      </div>
-    </section>
-    <h1
-      id="progetti-section"
-      class="mt-28 mb-24 ml-16 scroll-mt-28 text-7xl font-light"
-    >
-      Skills
-    </h1>
-    <section class="mx-16 mb-20">
-      <h1 class="mb-20 text-center text-4xl font-light">
-        Ottime competenze in molti linguaggi di programmazione.
-      </h1>
-      <div class="grid grid-cols-1 gap-14 sm:grid-cols-2 lg:grid-cols-2">
-        <div
-          class="mx-auto max-w-lg overflow-hidden rounded-xl border border-blue-300 bg-transparent shadow-md transition-all duration-200 ease-in-out hover:shadow-xl/20"
-        >
-          <div class="md:flex">
-            <div
-              class="flex h-full flex-col items-center justify-center gap-3 bg-blue-200 p-4 md:shrink-0"
-            >
-              <img
-                src="/javascript-icon.svg"
-                alt="JavaScript Logo"
-                class="mb-2 h-auto w-14"
-              />
-              <img
-                src="/html_icon.svg"
-                alt="HTML5 Logo"
-                class="mb-2 h-auto w-14"
-              />
-              <img src="/css-icon.svg" alt="CSS3 Logo" class="h-auto w-14" />
-            </div>
-            <div class="p-8 pt-5">
-              <h2 class="mt-1 block text-4xl leading-tight font-medium">
-                Web Development
-              </h2>
-              <p class="mt-4">
-                Solida padronanza di HTML, CSS e JavaScript per la creazione di
-                interfacce utente dinamiche e responsive.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div
-          class="mx-auto max-w-lg overflow-hidden rounded-xl border border-blue-300 bg-transparent shadow-md transition-all duration-200 ease-in-out hover:shadow-xl/20"
-        >
-          <div class="h-full md:flex">
-            <div
-              class="flex h-full flex-col items-center justify-center gap-3 bg-blue-200 p-4 md:shrink-0"
-            >
-              <img
-                src="/nodejs-ar21.svg"
-                alt="nodejs Logo"
-                class="mb-2 h-auto w-14"
-              />
-              <img
-                src="/tailwindcss-icon.svg"
-                alt="tailwindcss Logo"
-                class="mb-2 h-auto w-14"
-              />
-              <img src="/react_icon.svg" alt="React Logo" class="h-auto w-14" />
-            </div>
-            <div class="p-8 pt-5">
-              <h2 class="mt-1 block text-4xl leading-tight font-medium">
-                Framework & Librerie
-              </h2>
-              <p class="mt-4">
-                Esperienza con Node.js per il Back-End, React per lo sviluppo di
-                componenti dinamici e Tailwind CSS per lo styling rapido.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div
-          class="mx-auto max-w-lg overflow-hidden rounded-xl border border-blue-300 bg-transparent shadow-md transition-all duration-200 ease-in-out hover:shadow-xl/20"
-        >
-          <div class="md:flex">
-            <div
-              class="flex h-full flex-col items-center justify-center gap-3 bg-blue-200 p-4 md:shrink-0"
-            >
-              <img
-                src="/java_icon.svg"
-                alt="Java Logo"
-                class="mb-2 h-auto w-14"
-              />
-              <img
-                src="/cpp_icon.svg"
-                alt="Cpp Logo"
-                class="mb-2 h-auto w-14"
-              />
-              <img src="/c_icon.svg" alt="C Logo" class="h-auto w-14" />
-            </div>
-            <div class="p-8 pt-5">
-              <h2 class="mt-2 block text-3xl leading-tight font-medium">
-                Back-End Development
-              </h2>
-              <p class="mt-4">
-                Solide basi in C, C++ e Java, essenziali per la programmazione
-                di sistemi, la comprensione di strutture dati e algoritmi.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div
-          class="mx-auto max-w-lg overflow-hidden rounded-xl border border-blue-300 bg-transparent shadow-md transition-all duration-200 ease-in-out hover:shadow-xl/20"
-        >
-          <div class="h-full md:flex">
-            <div
-              class="flex h-full flex-col items-center justify-center gap-3 bg-blue-200 p-4 md:shrink-0"
-            >
-              <img src="/github.svg" alt="Git Logo" class="mb-2 h-auto w-14" />
-              <img
-                src="/python_icon.svg"
-                alt="Python Logo"
-                class="mb-2 h-auto w-16"
-              />
-            </div>
-            <div class="p-8 pt-5">
-              <h2 class="mt-1 block text-3xl leading-tight font-medium">
-                Version Control & API
-              </h2>
-              <p class="mt-4">
-                Competenza nell'uso di Git per il versionamento, conoscenza di
-                Python collegamenti API tra applicazioni.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="h-full bg-transparent py-8" id="contatti-section">
-      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-        <div
-          class="flex flex-col items-center justify-between border-b border-blue-300 pb-8 md:flex-row"
-        >
-          <div class="mb-4 text-3xl font-semibold md:mb-0">
-            Fabio Tognarelli
-          </div>
-          <div class="m-0 flex gap-4 p-0">
-            <a
-              href="https://github.com/FabioTognaa"
-              class="transition duration-300 hover:text-blue-500"
-            >
-              <img
-                src="/github.svg"
-                alt=""
-                class="h-auto w-9 transition-transform duration-200 hover:scale-110"
-              />
-            </a>
-
-            <a
-              href="https://www.linkedin.com/in/fabio-tognarelli"
-              class="transition duration-300 hover:text-blue-500"
-            >
-              <img
-                src="/linkedin.svg"
-                alt=""
-                class="h-auto w-9 transition-transform duration-200 hover:scale-110"
-              />
-            </a>
-            <a
-              href="https://www.instagram.com/fabiotognarellii"
-              class="transition duration-300 hover:text-blue-500"
-            >
-              <img
-                src="/instagram.svg"
-                alt=""
-                class="h-auto w-9 transition-transform duration-200 hover:scale-110"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="flex justify-around gap-8 pt-8 md:grid-cols-3">
-          <div>
-            <h3 class="mb-4 text-lg font-semibold">Navigazione</h3>
-            <ul class="space-y-2">
-              <li>
-                <a href="#" class="transition duration-300 hover:text-blue-500"
-                  >Home</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#about-me-section"
-                  class="transition duration-300 hover:text-blue-500"
-                  >About Me</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#progetti-section"
-                  class="transition duration-300 hover:text-blue-500"
-                  >Progetti</a
-                >
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <h3 class="mb-4 text-lg font-semibold">Contattami</h3>
-            <p>Email: fabiotognaa@gmail.com</p>
-            <p>Telefono: +39 366 838 1469</p>
-          </div>
-        </div>
-
-        <div class="mt-8 border-t border-blue-300 pt-8 text-center text-sm">
-          &copy; 2025 FabioTognaa.
-        </div>
-      </div>
-    </footer>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
