--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fabio-tognarelli-website</title>
+    <title>Fabio Tognarelli | personal website</title>
   </head>
   <body>
     <div id="root"></div>
