--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
+    <title>Fabio Tognarelli | personal website</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fabio Tognarelli | personal website</title>
+
+    <meta
+      name="description"
+      content="Portfolio di Fabio Tognarelli. Sviluppatore web Full Stack specializzato in React, Node.js e Python. Guarda i miei progetti."
+    />
+
+    <meta
+      name="keywords"
+      content="web developer, portfolio, react, javascript, java, python, github, C++, nodeJS, frontend, backend"
+    />
+    <meta name="author" content="Fabio Tognarelli" />
+
+    <meta property="og:title" content="Fabio Tognarelli - E-portfolio" />
+    <meta
+      property="og:description"
+      content="Sviluppatore web specializzato in React e Node.js. Scopri i miei progetti e il mio percorso."
+    />
+    <meta property="og:image" content="./src/public/og-image.png" />
+    <meta property="og:url" content="" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
