--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="it">
   <head>
-    <link rel="icon" type="image/svg+xml" href="/src/public/me-acquerelli.svg" />
+    <link rel="icon" type="image/svg+xml" href="/me-acquerelli.svg" />
     <title>Fabio Tognarelli | personal website</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
